--- a/style.css
+++ b/style.css
@@ -618,7 +618,7 @@ body{
   .grid-navbar{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 40px;
+    grid-template-rows: 35px;
     background: linear-gradient(to right, transparent 0%,transparent 10%,rgb(80,80,80) 11%,rgb(80,80,80) 89%,transparent 90%,transparent 90%,transparent 100%);
 }
 
@@ -644,7 +644,7 @@ body{
 }
 
 
-.grid-navbar > .div-menu:hover{
+.grid-navbar > .div-menu:hover:not(:last-child){
     background-color: rgb(39, 38, 36);
     /*background-image: linear-gradient(0deg, rgba(255,255,255,0.1) 5%, rgba(255,255,255,0) 50%, rgba(255,255,255,0.1) 51%);*/
     background-image: linear-gradient(to bottom, rgb(70,70,70) 0%,rgb(80,80,80) 50%,rgb(80,80,80) 50%,rgb(60, 60,60) 50%,rgb(70,70,70) 100%);
@@ -671,7 +671,7 @@ body{
     padding-top: 9px;
     padding-bottom: 9px;
     padding-left: 14px;
-    top:9%;
+    top:5%;
     left:12%;
   }
 
@@ -686,13 +686,13 @@ body{
 
 
   .apple-image{
-      width:25px;
-      height:25px;
+      width:20px;
+      height:20px;
   }
   
   .header-style{
     display: grid;
-    grid-template-columns: 1fr 7fr 1fr;
+    grid-template-columns: 3fr 16fr 3fr;
     margin-top: 100px;
 
   }
@@ -702,6 +702,7 @@ body{
     grid-template-columns: 3fr 7fr 7fr 3fr;
     grid-template-rows: 25px 25px;
     background-color:white;
+    margin-bottom:15px;
 }
 
 .grid-footer > div > span{
@@ -713,6 +714,7 @@ body{
 
 .grid-footer > div > span > a{
     text-decoration: none;
+    color: rgb(0, 136, 204);
 }
 
 .grid-footer > div > span > a:hover{
@@ -736,17 +738,52 @@ body{
     font-family: 'Work Sans', sans-serif;
     font-weight: 200;
     color: white;
-    font-size: 70px;
+    font-size: 55px;
     margin-bottom: 10px;
 }
 
-.line-n{
-    font-size: 26px;
+
+.line-n:not(:last-of-type){
+    font-size: 28px;
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
     color: white;
 }
 
+.motivational1{
+    margin-bottom:7.5px;
+}
+
+.motivational2{
+    margin-top:7.5px;
+}
+
+.line-n:last-of-type{
+    font-size: 22px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    color: white;
+    margin-top:25px;
+}
+
+.line-n:last-of-type:hover{
+    text-decoration: underline;
+}
+
+
 .sections-style{
-    margin-bottom:100px;
+    margin-bottom:135px;
+}
+
+.sections-style > h1{
+    cursor: pointer;
+}
+
+
+.grid-with-usa{
+    display:grid;
+    grid-template-columns: 18fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center; /*vertical align*/
+    justify-items: end; /*horizontal align*/
 }
