--- a/style.css
+++ b/style.css
@@ -730,7 +730,7 @@ body{
 }
 
 .top-section{
-    background: url(background-image.jpg) 50% 100% no-repeat;
+    background: url(images/background-image.jpg) 50% 100% no-repeat;
     background-size: 1440px 1315px;
 }
 
